# conanCuda

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  Doxyfile  FEATURES.md  LICENSE  Makefile  QUICKREF.md  README.md  conanfile.py  main.cpp  pyproject.toml  vectorAdd.cu  vector_operations.cuh
.devcontainer/: Dockerfile  GPU_SETUP.md  devcontainer.json  docker-compose.yml  post_create.sh  post_start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml
scripts/: memory_check.sh  static_analysis.sh
src/examples/: main.cpp
src/kernels/: vector_operations.cu
tests/: test_vector_add.cu
