[project]
name = "conancuda"
version = "0.1.0"
description = "CUDA C++ development boilerplate with Conan package manager and CMake build system"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Hossein Roshandel" }
]
keywords = ["cuda", "cpp", "conan", "cmake", "gpu", "parallel-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "conan>=2.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "pre-commit>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Hossein-Roshandel/conanCuda"
Repository = "https://github.com/Hossein-Roshandel/conanCuda.git"
Issues = "https://github.com/Hossein-Roshandel/conanCuda/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
